# jupyterhub-sphinx-theme

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml
docs/: conf.py  index.md
src/jupyterhub_sphinx_theme/: __init__.py
src/jupyterhub_sphinx_theme/assets/styles/: jupyterhub-sphinx-theme.scss
src/jupyterhub_sphinx_theme/assets/styles/abstract/: _variables.scss
